--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: neldermead
 Type: Package
 Title: R port of the Scilab neldermead module
-Version: 1.0-1
-Date: 2010-05-05
+Version: 1.0-2
+Date: 2010-05-11
 Author: Sebastien Bihorel, Michael Baudin (author of the original
         module)
 Maintainer: Sebastien Bihorel <sb.pmlab@gmail.com>
@@ -12,14 +12,14 @@ Description: Provides several direct search optimization algorithms
         search algorithms, i.e. algorithms which do not use the
         derivative of the cost function. They are based on the update
         of a simplex. The following algorithms are available: the fixed
-        size simplex method of Spendley, Hext and Himsworth
-        (unconstrained optimization with a fixed sized simplex), the
-        variable size simplex method of Nelder and Mead (unconstrained
-        optimization with a variable sized simplex made of k=n+1
-        vertices), Box's complex method (constrained optimization with
-        a variable sized simplex).
+        shape simplex method of Spendley, Hext and Himsworth
+        (unconstrained optimization with a fixed shape simplex), the
+        variable shape simplex method of Nelder and Mead (unconstrained
+        optimization with a variable shape simplex made), and Box's
+        complex method (constrained optimization with a variable shape
+        simplex).
 License: CeCILL-2
 LazyLoad: yes
-Packaged: 2010-05-05 11:17:52 UTC; sebastien
+Packaged: 2010-05-12 01:25:26 UTC; sebastien
 Repository: CRAN
-Date/Publication: 2010-05-05 11:27:02
+Date/Publication: 2010-05-12 07:21:57
